--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -1,14 +1,31 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-15\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.IPParameters=Rank-15\#ChannelRegularConversion,Channel-15\#ChannelRegularConversion,SamplingTime-15\#ChannelRegularConversion,NbrOfConversionFlag,master
-ADC1.NbrOfConversionFlag=1
-ADC1.Rank-15\#ChannelRegularConversion=1
-ADC1.SamplingTime-15\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.master=1
+Dma.Request0=SPI1_RX
+Dma.Request1=SPI1_TX
+Dma.RequestsNb=2
+Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.0.Instance=DMA2_Stream0
+Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.0.Mode=DMA_NORMAL
+Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.0.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.1.Instance=DMA2_Stream3
+Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.1.Mode=DMA_NORMAL
+Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.1.Priority=DMA_PRIORITY_HIGH
+Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
-Mcu.IP0=ADC1
+Mcu.IP0=DMA
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=RTC
@@ -20,37 +37,60 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PB3
-Mcu.Pin14=VP_RTC_VS_RTC_Activate
-Mcu.Pin15=VP_SYS_VS_Systick
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PA8
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PB3
+Mcu.Pin16=VP_RTC_VS_RTC_Activate
+Mcu.Pin17=VP_RTC_VS_RTC_Calendar
+Mcu.Pin18=VP_RTC_VS_RTC_WakeUp_intern
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA5
-Mcu.Pin9=PA6
-Mcu.PinsNb=16
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA5
+Mcu.PinsNb=20
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=4.22.0
 MxDb.Version=DB.4.0.220
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:true\:true\:5
+NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:true\:true\:6
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:true\:true\:1
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false
+NVIC.PVD_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
+NVIC.RCC_IRQn=true\:0\:0\:false\:true\:true\:2
+NVIC.RTC_WKUP_IRQn=true\:0\:0\:true\:true\:true\:3
+NVIC.SPI1_IRQn=true\:0\:0\:false\:true\:true\:4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA0-WKUP.GPIO_Label=BNRG_SPI_IRQ
+PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+PA0-WKUP.GPIO_PuPd=GPIO_PULLDOWN
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=ADCx_IN0
+PA0-WKUP.Signal=GPXTI0
+PA1.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
+PA1.GPIO_Label=BNRG_SPI_CS
+PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA1.Locked=true
+PA1.PinState=GPIO_PIN_RESET
+PA1.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -71,18 +111,29 @@ PA3.GPIO_Label=USART_RX
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=LED2
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=BNRG_SPI_MISO
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=BNRG_SPI_MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
+PA8.GPIOParameters=GPIO_Label
+PA8.GPIO_Label=BNRG_SPI_RESET
+PA8.Locked=true
+PA8.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
+PB3.GPIO_Label=BNRG_SPI_SCLK
 PB3.Locked=true
-PB3.Signal=SYS_JTDO-SWO
+PB3.Mode=Full_Duplex_Master
+PB3.Signal=SPI1_SCK
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
-PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
+PC13-ANTI_TAMP.GPIO_Label=USER_BUTTON
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPXTI13
@@ -112,7 +163,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=
+ProjectManager.CustomerFirmwarePackage=/home/user/STM32Cube/Repository/STM32Cube_FW_F4_V1.16.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F411RETx
@@ -131,7 +182,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART2_UART_Init-USART2-false-HAL,4-MX_RTC_Init-RTC-false-HAL,5-MX_SPI1_Init-SPI1-false-HAL,6-MX_ADC1_Init-ADC1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_USART2_UART_Init-USART2-false-HAL,5-MX_RTC_Init-RTC-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL
 RCC.48MHZClocksFreq_Value=100000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -166,19 +217,32 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=500000
 RCC.VCOOutputFreq_Value=400000000
 RCC.VcooutputI2S=48000000
-SH.ADCx_IN0.0=ADC1_IN0,IN0
-SH.ADCx_IN0.ConfNb=1
+RTC.AsynchPrediv=0x7F
+RTC.IPParameters=AsynchPrediv,SynchPrediv,WakeUpClock,WakeUpCounter
+RTC.SynchPrediv=0x013
+RTC.WakeUpClock=RTC_WAKEUPCLOCK_RTCCLK_DIV2
+RTC.WakeUpCounter=0
+SH.GPXTI0.0=GPIO_EXTI0
+SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI1.CalculateBaudRate=50.0 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI1.CLKPhase=SPI_PHASE_1EDGE
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
+SPI1.CalculateBaudRate=6.25 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CRCCalculation,BaudRatePrescaler,CLKPhase,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
+VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
+VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F411RE
