--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -1,38 +1,14 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.Request0=SPI1_RX
-Dma.Request1=SPI1_TX
-Dma.RequestsNb=2
-Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_RX.0.Instance=DMA2_Stream0
-Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.0.Mode=DMA_NORMAL
-Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.SPI1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_TX.1.Instance=DMA2_Stream3
-Dma.SPI1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.1.Mode=DMA_NORMAL
-Dma.SPI1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.1.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=RTC
+Mcu.IP3=SPI1
+Mcu.IP4=SYS
+Mcu.IP5=USART2
+Mcu.IPNb=6
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -61,8 +37,6 @@ Mcu.UserName=STM32F411RETx
 MxCube.Version=4.22.0
 MxDb.Version=DB.4.0.220
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false
-NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:true\:true\:5
-NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:true\:true\:6
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:true\:true\:1
@@ -73,7 +47,6 @@ NVIC.PVD_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
 NVIC.RCC_IRQn=true\:0\:0\:false\:true\:true\:2
-NVIC.RTC_WKUP_IRQn=true\:0\:0\:true\:true\:true\:3
 NVIC.SPI1_IRQn=true\:0\:0\:false\:true\:true\:4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true
@@ -182,7 +155,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_USART2_UART_Init-USART2-false-HAL,5-MX_RTC_Init-RTC-false-HAL,6-MX_SPI1_Init-SPI1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART2_UART_Init-USART2-false-HAL,4-MX_SPI1_Init-SPI1-false-HAL,5-MX_RTC_Init-RTC-false-HAL
 RCC.48MHZClocksFreq_Value=100000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -217,18 +190,13 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=500000
 RCC.VCOOutputFreq_Value=400000000
 RCC.VcooutputI2S=48000000
-RTC.AsynchPrediv=0x7F
-RTC.IPParameters=AsynchPrediv,SynchPrediv,WakeUpClock,WakeUpCounter
-RTC.SynchPrediv=0x013
-RTC.WakeUpClock=RTC_WAKEUPCLOCK_RTCCLK_DIV2
-RTC.WakeUpCounter=0
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.CLKPhase=SPI_PHASE_1EDGE
-SPI1.CLKPolarity=SPI_POLARITY_HIGH
+SPI1.CLKPolarity=SPI_POLARITY_LOW
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
 SPI1.CalculateBaudRate=6.25 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
