--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -4,34 +4,31 @@ KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=RTC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=USART2
-Mcu.IPNb=6
+Mcu.IP2=SPI1
+Mcu.IP3=SYS
+Mcu.IP4=USART2
+Mcu.IPNb=5
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA6
-Mcu.Pin11=PA7
-Mcu.Pin12=PA8
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PB3
-Mcu.Pin16=VP_RTC_VS_RTC_Activate
-Mcu.Pin17=VP_RTC_VS_RTC_Calendar
-Mcu.Pin18=VP_RTC_VS_RTC_WakeUp_intern
-Mcu.Pin19=VP_SYS_VS_Systick
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PA8
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PB3
+Mcu.Pin17=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA5
-Mcu.PinsNb=20
+Mcu.Pin5=PC3
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=18
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=4.22.0
@@ -116,6 +113,8 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC3.Locked=true
+PC3.Signal=GPXTI3
 PCC.Checker=false
 PCC.Line=STM32F411
 PCC.MCU=STM32F411R(C-E)Tx
@@ -155,7 +154,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART2_UART_Init-USART2-false-HAL,4-MX_SPI1_Init-SPI1-false-HAL,5-MX_RTC_Init-RTC-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART2_UART_Init-USART2-false-HAL,4-MX_SPI1_Init-SPI1-false-HAL
 RCC.48MHZClocksFreq_Value=100000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -194,6 +193,8 @@ SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
 SPI1.CLKPhase=SPI_PHASE_1EDGE
 SPI1.CLKPolarity=SPI_POLARITY_LOW
@@ -205,12 +206,6 @@ SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
-VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
-VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
-VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
-VP_RTC_VS_RTC_WakeUp_intern.Mode=WakeUp
-VP_RTC_VS_RTC_WakeUp_intern.Signal=RTC_VS_RTC_WakeUp_intern
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F411RE
