--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -7,9 +7,10 @@ Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI1
 Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IP6=USART2
-Mcu.IPNb=7
+Mcu.IP5=TIM2
+Mcu.IP6=USART1
+Mcu.IP7=USART2
+Mcu.IPNb=8
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -30,6 +31,7 @@ Mcu.Pin21=PB5
 Mcu.Pin22=PB8
 Mcu.Pin23=PB9
 Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC1
@@ -37,7 +39,7 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=25
+Mcu.PinsNb=26
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=4.22.0
@@ -61,6 +63,7 @@ NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false
@@ -195,7 +198,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART2_UART_Init-USART2-false-HAL,4-MX_SPI1_Init-SPI1-false-HAL,5-MX_USART1_UART_Init-USART1-false-HAL,6-MX_I2C1_Init-I2C1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART2_UART_Init-USART2-false-HAL,4-MX_SPI1_Init-SPI1-false-HAL,5-MX_USART1_UART_Init-USART1-false-HAL,6-MX_I2C1_Init-I2C1-false-HAL,7-MX_TIM2_Init-TIM2-false-HAL
 RCC.48MHZClocksFreq_Value=100000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -251,6 +254,9 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CRCCalculation,BaudRatePrescaler,CLKPhase,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM2.IPParameters=Prescaler,Period
+TIM2.Period=0xffffffff
+TIM2.Prescaler=99
 USART1.BaudRate=4800
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
@@ -258,5 +264,7 @@ USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=NUCLEO-F411RE
 boardIOC=true
