--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -1,16 +1,23 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_14
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI1
-Mcu.IP4=SYS
-Mcu.IP5=TIM2
-Mcu.IP6=USART1
-Mcu.IP7=USART2
-Mcu.IPNb=8
+Mcu.IP0=ADC1
+Mcu.IP1=I2C1
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI1
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=USART1
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -18,20 +25,22 @@ Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA5
 Mcu.Pin11=PA6
 Mcu.Pin12=PA7
-Mcu.Pin13=PB10
-Mcu.Pin14=PA8
-Mcu.Pin15=PA9
-Mcu.Pin16=PA10
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB3
+Mcu.Pin13=PC4
+Mcu.Pin14=PB10
+Mcu.Pin15=PA8
+Mcu.Pin16=PA9
+Mcu.Pin17=PA10
+Mcu.Pin18=PA11
+Mcu.Pin19=PA13
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB4
-Mcu.Pin21=PB5
-Mcu.Pin22=PB8
-Mcu.Pin23=PB9
-Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PA14
+Mcu.Pin21=PB3
+Mcu.Pin22=PB4
+Mcu.Pin23=PB5
+Mcu.Pin24=PB8
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC1
@@ -39,7 +48,7 @@ Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=26
+Mcu.PinsNb=28
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=4.22.0
@@ -81,6 +90,10 @@ PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=GPS_RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=GPS_TOGGLE
+PA11.Locked=true
+PA11.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -159,6 +172,10 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC4.GPIOParameters=GPIO_Label
+PC4.GPIO_Label=LOAD_CELL_ADC
+PC4.Locked=true
+PC4.Signal=ADCx_IN14
 PCC.Checker=false
 PCC.Line=STM32F411
 PCC.MCU=STM32F411R(C-E)Tx
@@ -198,7 +215,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART2_UART_Init-USART2-false-HAL,4-MX_SPI1_Init-SPI1-false-HAL,5-MX_USART1_UART_Init-USART1-false-HAL,6-MX_I2C1_Init-I2C1-false-HAL,7-MX_TIM2_Init-TIM2-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART2_UART_Init-USART2-false-HAL,4-MX_SPI1_Init-SPI1-false-HAL,5-MX_USART1_UART_Init-USART1-false-HAL,6-MX_I2C1_Init-I2C1-false-HAL,7-MX_TIM2_Init-TIM2-false-HAL,8-MX_ADC1_Init-ADC1-false-HAL
 RCC.48MHZClocksFreq_Value=100000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -233,6 +250,8 @@ RCC.VCOInputFreq_Value=1000000
 RCC.VCOInputMFreq_Value=500000
 RCC.VCOOutputFreq_Value=400000000
 RCC.VcooutputI2S=48000000
+SH.ADCx_IN14.0=ADC1_IN14,IN14
+SH.ADCx_IN14.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
