--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -1,23 +1,46 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_14
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.Channel-4\#ChannelInjectedConversion=ADC_CHANNEL_14
+ADC1.DMAContinuousRequests=ENABLE
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,DMAContinuousRequests,NbrOfConversion,Rank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,InjNumberOfConversion,Resolution,EOCSelection
+ADC1.InjNumberOfConversion=1
+ADC1.InjectedOffset-4\#ChannelInjectedConversion=0
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank-4\#ChannelInjectedConversion=1
+ADC1.Resolution=ADC_RESOLUTION_8B
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.ScanConvMode=ENABLE
 ADC1.master=1
+Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.Mode=DMA_CIRCULAR
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=ADC1
+Dma.RequestsNb=1
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=I2C1
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP1=DMA
+Mcu.IP2=I2C1
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
@@ -53,7 +76,9 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=4.22.0
 MxDb.Version=DB.4.0.220
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true
@@ -215,7 +240,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=TrueSTUDIO
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_USART2_UART_Init-USART2-false-HAL,4-MX_SPI1_Init-SPI1-false-HAL,5-MX_USART1_UART_Init-USART1-false-HAL,6-MX_I2C1_Init-I2C1-false-HAL,7-MX_TIM2_Init-TIM2-false-HAL,8-MX_ADC1_Init-ADC1-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-HAL,3-SystemClock_Config-RCC-false-HAL,4-MX_USART2_UART_Init-USART2-false-HAL,5-MX_SPI1_Init-SPI1-false-HAL,6-MX_USART1_UART_Init-USART1-false-HAL,7-MX_I2C1_Init-I2C1-false-HAL,8-MX_TIM2_Init-TIM2-false-HAL,9-MX_ADC1_Init-ADC1-false-HAL
 RCC.48MHZClocksFreq_Value=100000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
