Read ADC (load cell pin)

--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -1,10 +1,20 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_14
 ADC1.Channel-4\#ChannelInjectedConversion=ADC_CHANNEL_14
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
+ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
+ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.DiscontinuousConvMode=DISABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,DMAContinuousRequests,NbrOfConversion,Rank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,InjNumberOfConversion,Resolution,EOCSelection
+ADC1.EnableAnalogWatchDog=false
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC1.ExternalTrigInjecConv=ADC_INJECTED_SOFTWARE_START
+ADC1.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_NONE
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,DMAContinuousRequests,NbrOfConversion,Rank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,InjNumberOfConversion,Resolution,EOCSelection,InjectedConvMode,ClockPrescaler,DataAlign,ContinuousConvMode,DiscontinuousConvMode,ExternalTrigConv,ExternalTrigConvEdge,ExternalTrigInjecConv,ExternalTrigInjecConvEdge,EnableAnalogWatchDog
 ADC1.InjNumberOfConversion=1
+ADC1.InjectedConvMode=None
 ADC1.InjectedOffset-4\#ChannelInjectedConversion=0
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
@@ -12,7 +22,7 @@ ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-4\#ChannelInjectedConversion=1
 ADC1.Resolution=ADC_RESOLUTION_8B
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_112CYCLES
 ADC1.ScanConvMode=ENABLE
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
