--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -60,10 +60,10 @@ Mcu.Pin11=PA6
 Mcu.Pin12=PA7
 Mcu.Pin13=PC4
 Mcu.Pin14=PB10
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA11
+Mcu.Pin15=PC7
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
 Mcu.Pin19=PA13
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PA14
@@ -125,10 +125,6 @@ PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=GPS_RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.GPIOParameters=GPIO_Label
-PA11.GPIO_Label=GPS_TOGGLE
-PA11.Locked=true
-PA11.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -211,6 +207,19 @@ PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=LOAD_CELL_ADC
 PC4.Locked=true
 PC4.Signal=ADCx_IN14
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=GPS_ON_OFF
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PCC.Battery=Li-SOCL2(A3400)
+PCC.Battery.Capacity=3400.0
+PCC.Battery.Compatibility=Yes
+PCC.Battery.InParallel=1
+PCC.Battery.InSeries=1
+PCC.Battery.MaxContinuous=100.0
+PCC.Battery.MaxPulseCurrent=200.0
+PCC.Battery.NominalVoltage=3.6
+PCC.Battery.SelfDischarge=0.08
 PCC.Checker=false
 PCC.Line=STM32F411
 PCC.MCU=STM32F411R(C-E)Tx
@@ -218,7 +227,7 @@ PCC.PartNumber=STM32F411RETx
 PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
-PCC.Vdd=null
+PCC.Vdd=3.6
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Clock-Source
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
