--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -36,7 +36,51 @@ Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.Request0=ADC1
-Dma.RequestsNb=1
+Dma.Request1=USART2_RX
+Dma.Request2=USART2_TX
+Dma.Request3=USART1_RX
+Dma.Request4=USART1_TX
+Dma.RequestsNb=5
+Dma.USART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.3.Instance=DMA2_Stream2
+Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.3.Mode=DMA_CIRCULAR
+Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.4.Instance=DMA2_Stream7
+Dma.USART1_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.4.Mode=DMA_NORMAL
+Dma.USART1_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.1.Instance=DMA1_Stream5
+Dma.USART2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.1.Mode=DMA_CIRCULAR
+Dma.USART2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.2.Instance=DMA1_Stream6
+Dma.USART2_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.2.Mode=DMA_NORMAL
+Dma.USART2_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
@@ -88,7 +132,11 @@ MxCube.Version=4.22.0
 MxDb.Version=DB.4.0.220
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true
+NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true
+NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true
