Add simple MATLAB serial plotting script

--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -106,21 +106,22 @@ Mcu.Pin11=PA5
 Mcu.Pin12=PA6
 Mcu.Pin13=PA7
 Mcu.Pin14=PC4
-Mcu.Pin15=PB10
-Mcu.Pin16=PC7
-Mcu.Pin17=PA8
-Mcu.Pin18=PA9
-Mcu.Pin19=PA10
+Mcu.Pin15=PC5
+Mcu.Pin16=PB10
+Mcu.Pin17=PC7
+Mcu.Pin18=PA8
+Mcu.Pin19=PA9
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PB3
-Mcu.Pin23=PB4
-Mcu.Pin24=PB5
-Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PA10
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PB3
+Mcu.Pin24=PB4
+Mcu.Pin25=PB5
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
@@ -128,7 +129,7 @@ Mcu.Pin6=PC1
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=29
+Mcu.PinsNb=30
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=4.22.0
@@ -264,9 +265,13 @@ PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=LOAD_CELL_ADC
+PC4.GPIO_Label=LOAD_CELL_0_ADC
 PC4.Locked=true
 PC4.Signal=ADCx_IN14
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=LOAD_CELL_1_ADC
+PC5.Locked=true
+PC5.Signal=ADCx_IN15
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=GPS_ON_OFF
 PC7.Locked=true
@@ -356,6 +361,8 @@ RCC.VCOOutputFreq_Value=400000000
 RCC.VcooutputI2S=48000000
 SH.ADCx_IN14.0=ADC1_IN14,IN14
 SH.ADCx_IN14.ConfNb=1
+SH.ADCx_IN15.0=ADC1_IN15,IN15
+SH.ADCx_IN15.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.GPXTI1.0=GPIO_EXTI1
