--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -109,27 +109,28 @@ Mcu.Pin14=PC4
 Mcu.Pin15=PC5
 Mcu.Pin16=PB10
 Mcu.Pin17=PC7
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin18=PC9
+Mcu.Pin19=PA8
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA10
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PB3
-Mcu.Pin24=PB4
-Mcu.Pin25=PB5
-Mcu.Pin26=PB8
-Mcu.Pin27=PB9
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin20=PA9
+Mcu.Pin21=PA10
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=PB3
+Mcu.Pin25=PB4
+Mcu.Pin26=PB5
+Mcu.Pin27=PB8
+Mcu.Pin28=PB9
+Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PH0 - OSC_IN
+Mcu.Pin30=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PA0-WKUP
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=30
+Mcu.PinsNb=31
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
 MxCube.Version=4.22.0
@@ -276,6 +277,11 @@ PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=GPS_ON_OFF
 PC7.Locked=true
 PC7.Signal=GPIO_Output
+PC9.GPIOParameters=PinState,GPIO_Label
+PC9.GPIO_Label=RANGE_SHDN
+PC9.Locked=true
+PC9.PinState=GPIO_PIN_SET
+PC9.Signal=GPIO_Output
 PCC.Battery=Li-SOCL2(A3400)
 PCC.Battery.Capacity=3400.0
 PCC.Battery.Compatibility=Yes
