--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -134,37 +134,37 @@ Mcu.Pin9=PA2
 Mcu.PinsNb=31
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
-MxCube.Version=4.22.0
-MxDb.Version=DB.4.0.220
-NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false
-NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true
-NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true
-NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true
-NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true
-NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false
-NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true
-NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false
-NVIC.PVD_IRQn=true\:0\:0\:false\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true
+MxCube.Version=4.22.1
+MxDb.Version=DB.4.0.221
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.PVD_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_0
-NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true
-NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true
-NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true
-NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false
+NVIC.RCC_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=BNRG_SPI_IRQ
 PA0-WKUP.Locked=true
@@ -237,12 +237,12 @@ PB5.GPIO_Label=LSM6DSL_INT1_O
 PB5.Locked=true
 PB5.Signal=GPXTI5
 PB8.GPIOParameters=GPIO_Label
-PB8.GPIO_Label=IMU_I2C_SCL
+PB8.GPIO_Label=I2C_SCL
 PB8.Locked=true
 PB8.Mode=I2C
 PB8.Signal=I2C1_SCL
 PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=IMU_I2C_SDA
+PB9.GPIO_Label=I2C_SDA
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
@@ -312,7 +312,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=/home/user/STM32Cube/Repository/STM32Cube_FW_F4_V1.16.0
+ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F411RETx
