Adjusted for pcb rev2

--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -1,8 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_14
 ADC1.Channel-4\#ChannelInjectedConversion=ADC_CHANNEL_14
+ADC1.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_15
+ADC1.Channel-6\#ChannelInjectedConversion=ADC_CHANNEL_15
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV4
-ADC1.ContinuousConvMode=ENABLE
+ADC1.ContinuousConvMode=DISABLE
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.DataAlign=ADC_DATAALIGN_RIGHT
 ADC1.DiscontinuousConvMode=DISABLE
@@ -12,79 +14,84 @@ ADC1.ExternalTrigConv=ADC_SOFTWARE_START
 ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
 ADC1.ExternalTrigInjecConv=ADC_INJECTED_SOFTWARE_START
 ADC1.ExternalTrigInjecConvEdge=ADC_EXTERNALTRIGINJECCONVEDGE_NONE
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,DMAContinuousRequests,NbrOfConversion,Rank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,InjNumberOfConversion,Resolution,EOCSelection,InjectedConvMode,ClockPrescaler,DataAlign,ContinuousConvMode,DiscontinuousConvMode,ExternalTrigConv,ExternalTrigConvEdge,ExternalTrigInjecConv,ExternalTrigInjecConvEdge,EnableAnalogWatchDog
-ADC1.InjNumberOfConversion=1
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ScanConvMode,DMAContinuousRequests,NbrOfConversion,Rank-4\#ChannelInjectedConversion,Channel-4\#ChannelInjectedConversion,SamplingTime-4\#ChannelInjectedConversion,InjectedOffset-4\#ChannelInjectedConversion,InjNumberOfConversion,Resolution,EOCSelection,InjectedConvMode,ClockPrescaler,DataAlign,ContinuousConvMode,DiscontinuousConvMode,ExternalTrigConv,ExternalTrigConvEdge,ExternalTrigInjecConv,ExternalTrigInjecConvEdge,EnableAnalogWatchDog,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,Rank-6\#ChannelInjectedConversion,Channel-6\#ChannelInjectedConversion,SamplingTime-6\#ChannelInjectedConversion,InjectedOffset-6\#ChannelInjectedConversion
+ADC1.InjNumberOfConversion=2
 ADC1.InjectedConvMode=None
 ADC1.InjectedOffset-4\#ChannelInjectedConversion=0
-ADC1.NbrOfConversion=1
+ADC1.InjectedOffset-6\#ChannelInjectedConversion=0
+ADC1.NbrOfConversion=2
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.Rank-4\#ChannelInjectedConversion=1
-ADC1.Resolution=ADC_RESOLUTION_8B
-ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_112CYCLES
+ADC1.Rank-5\#ChannelRegularConversion=2
+ADC1.Rank-6\#ChannelInjectedConversion=2
+ADC1.Resolution=ADC_RESOLUTION_12B
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.SamplingTime-4\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_28CYCLES
+ADC1.SamplingTime-6\#ChannelInjectedConversion=ADC_SAMPLETIME_28CYCLES
 ADC1.ScanConvMode=ENABLE
 ADC1.master=1
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.0.Instance=DMA2_Stream0
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
-Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.Request0=ADC1
-Dma.Request1=USART2_RX
-Dma.Request2=USART2_TX
-Dma.Request3=USART1_RX
-Dma.Request4=USART1_TX
+Dma.ADC1.4.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.4.Instance=DMA2_Stream0
+Dma.ADC1.4.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.4.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.4.Mode=DMA_CIRCULAR
+Dma.ADC1.4.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.4.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.4.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=USART1_RX
+Dma.Request1=USART1_TX
+Dma.Request2=USART2_RX
+Dma.Request3=USART2_TX
+Dma.Request4=ADC1
 Dma.RequestsNb=5
-Dma.USART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_RX.3.Instance=DMA2_Stream2
-Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.3.Mode=DMA_CIRCULAR
-Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART1_TX.4.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_TX.4.Instance=DMA2_Stream7
-Dma.USART1_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.4.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.4.Mode=DMA_NORMAL
-Dma.USART1_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.4.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART2_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_RX.1.Instance=DMA1_Stream5
-Dma.USART2_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.USART2_RX.1.Mode=DMA_CIRCULAR
-Dma.USART2_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.USART2_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART2_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART2_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART2_TX.2.Instance=DMA1_Stream6
-Dma.USART2_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART2_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART2_TX.2.Mode=DMA_NORMAL
-Dma.USART2_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART2_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART2_TX.2.Priority=DMA_PRIORITY_LOW
-Dma.USART2_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.0.Instance=DMA2_Stream2
+Dma.USART1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.0.Mode=DMA_CIRCULAR
+Dma.USART1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.1.Instance=DMA2_Stream7
+Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.1.Mode=DMA_NORMAL
+Dma.USART1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.1.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART2_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_RX.2.Instance=DMA1_Stream5
+Dma.USART2_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART2_RX.2.Mode=DMA_CIRCULAR
+Dma.USART2_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART2_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART2_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART2_TX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART2_TX.3.Instance=DMA1_Stream6
+Dma.USART2_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART2_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART2_TX.3.Mode=DMA_NORMAL
+Dma.USART2_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART2_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART2_TX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART2_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
-I2C1.ClockSpeed=400000
+I2C1.ClockSpeed=MAIN_I2C_SPEED
 I2C1.I2C_Mode=I2C_Fast
-I2C1.IPParameters=ClockSpeed,I2C_Mode
+I2C1.IPParameters=I2C_Mode,ClockSpeed
 KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
@@ -102,37 +109,36 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA3
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PC4
-Mcu.Pin15=PC5
-Mcu.Pin16=PB10
-Mcu.Pin17=PC7
-Mcu.Pin18=PC9
-Mcu.Pin19=PA8
+Mcu.Pin10=PA5
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PB10
+Mcu.Pin16=PC9
+Mcu.Pin17=PA8
+Mcu.Pin18=PA9
+Mcu.Pin19=PA10
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=PB3
-Mcu.Pin25=PB4
-Mcu.Pin26=PB5
-Mcu.Pin27=PB8
-Mcu.Pin28=PB9
-Mcu.Pin29=VP_SYS_VS_Systick
+Mcu.Pin20=PA11
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PB3
+Mcu.Pin24=PB4
+Mcu.Pin25=PB5
+Mcu.Pin26=PB8
+Mcu.Pin27=PB9
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin3=PH0 - OSC_IN
-Mcu.Pin30=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin4=PH1 - OSC_OUT
-Mcu.Pin5=PC0
-Mcu.Pin6=PC1
-Mcu.Pin7=PA0-WKUP
-Mcu.Pin8=PA1
-Mcu.Pin9=PA2
-Mcu.PinsNb=31
-Mcu.UserConstants=
+Mcu.Pin5=PC1
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA3
+Mcu.PinsNb=30
+Mcu.UserConstants=MAIN_I2C_SPEED,400000
 Mcu.UserName=STM32F411RETx
 MxCube.Version=4.23.0
 MxDb.Version=DB.4.0.230
@@ -146,7 +152,6 @@ NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true
 NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.EXTI1_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.EXTI4_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true
@@ -179,6 +184,11 @@ PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=GPS_USART_RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA11.GPIO_Label=GPS_ON_OFF
+PA11.GPIO_PuPd=GPIO_NOPULL
+PA11.Locked=true
+PA11.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -211,8 +221,9 @@ PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=BNRG_SPI_MOSI
 PA7.Mode=Full_Duplex_Master
 PA7.Signal=SPI1_MOSI
-PA8.GPIOParameters=GPIO_Label
+PA8.GPIOParameters=GPIO_Speed,GPIO_Label
 PA8.GPIO_Label=BNRG_SPI_RESET
+PA8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA8.Locked=true
 PA8.Signal=GPIO_Output
 PA9.GPIOParameters=GPIO_Label
@@ -229,11 +240,11 @@ PB3.Locked=true
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI1_SCK
 PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=LSM6DSL_INT2_O
+PB4.GPIO_Label=LSM6DSL_INT1_O
 PB4.Locked=true
 PB4.Signal=GPXTI4
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=LSM6DSL_INT1_O
+PB5.GPIO_Label=LSM6DSL_INT2_O
 PB5.Locked=true
 PB5.Signal=GPXTI5
 PB8.GPIOParameters=GPIO_Label
@@ -246,24 +257,18 @@ PB9.GPIO_Label=I2C_SDA
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC0.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
-PC0.GPIO_Label=GPS_NRST
-PC0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PC0.Locked=true
-PC0.Signal=GPIO_Output
-PC1.GPIOParameters=GPIO_Label
-PC1.GPIO_Label=M_INT2_O
+PC1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PC1.GPIO_Label=GPS_NRST
+PC1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PC1.Locked=true
-PC1.Signal=GPXTI1
+PC1.Signal=GPIO_Output
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=USER_BUTTON
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13-ANTI_TAMP.Locked=true
 PC13-ANTI_TAMP.Signal=GPXTI13
-PC14-OSC32_IN.Locked=true
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
-PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.GPIOParameters=GPIO_Label
@@ -274,10 +279,6 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=LOAD_CELL_1_ADC
 PC5.Locked=true
 PC5.Signal=ADCx_IN15
-PC7.GPIOParameters=GPIO_Label
-PC7.GPIO_Label=GPS_ON_OFF
-PC7.Locked=true
-PC7.Signal=GPIO_Output
 PC9.GPIOParameters=PinState,GPIO_Label
 PC9.GPIO_Label=RANGE_SHDN
 PC9.Locked=true
@@ -301,10 +302,10 @@ PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.6
 PH0\ -\ OSC_IN.Locked=true
-PH0\ -\ OSC_IN.Mode=HSE-External-Clock-Source
+PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Locked=true
-PH1\ -\ OSC_OUT.Mode=HSE-External-Clock-Source
+PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
 PH1\ -\ OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -372,8 +373,6 @@ SH.ADCx_IN15.0=ADC1_IN15,IN15
 SH.ADCx_IN15.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
-SH.GPXTI1.0=GPIO_EXTI1
-SH.GPXTI1.ConfNb=1
 SH.GPXTI10.0=GPIO_EXTI10
 SH.GPXTI10.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
@@ -382,11 +381,11 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 SPI1.CLKPhase=SPI_PHASE_1EDGE
 SPI1.CLKPolarity=SPI_POLARITY_LOW
 SPI1.CRCCalculation=SPI_CRCCALCULATION_DISABLE
-SPI1.CalculateBaudRate=6.25 MBits/s
+SPI1.CalculateBaudRate=390.625 KBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CRCCalculation,BaudRatePrescaler,CLKPhase,CLKPolarity
 SPI1.Mode=SPI_MODE_MASTER
@@ -395,8 +394,10 @@ TIM2.IPParameters=Prescaler,Period
 TIM2.Period=0xffffffff
 TIM2.Prescaler=99
 USART1.BaudRate=4800
-USART1.IPParameters=VirtualMode,BaudRate
+USART1.IPParameters=VirtualMode,BaudRate,WordLength,StopBits
+USART1.StopBits=STOPBITS_1
 USART1.VirtualMode=VM_ASYNC
+USART1.WordLength=WORDLENGTH_8B
 USART2.BaudRate=230400
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
