--- a/sailoraid.ioc
+++ b/sailoraid.ioc
@@ -186,7 +186,7 @@ PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA11.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA11.GPIO_Label=GPS_ON_OFF
-PA11.GPIO_PuPd=GPIO_NOPULL
+PA11.GPIO_PuPd=GPIO_PULLUP
 PA11.Locked=true
 PA11.Signal=GPIO_Output
 PA13.GPIOParameters=GPIO_Label
@@ -257,9 +257,10 @@ PB9.GPIO_Label=I2C_SDA
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
-PC1.GPIOParameters=GPIO_Label,GPIO_ModeDefaultOutputPP
+PC1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PC1.GPIO_Label=GPS_NRST
-PC1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PC1.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PC1.GPIO_PuPd=GPIO_PULLUP
 PC1.Locked=true
 PC1.Signal=GPIO_Output
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
